modules/k8s_cluster_configuration/examples/ingress_nginx_with_pvc/0_base/nginx_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
  name: nginx-ingress
spec:
  rules:
  - host: nginx.example-domain.com
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx.example-domain.com
    secretName: nginx-ingress-cert
